...
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:tint="@color/colorPrimaryDark"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/BTNsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETLoginPassword" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/ETfirstname"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
...
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETfirstname" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="223dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
...
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETemail" />

    <Button
        android:id="@+id/BTNsignup"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/colorPrimaryDark"
        android:tint="@color/colorPrimaryDark"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETaboutme" />

    <EditText
        android:id="@+id/ETaboutme"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
...
        app:layout_constraintBottom_toTopOf="@+id/BTNsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/TVpic"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:text="@string/Wise" />

            <RadioButton
                android:id="@+id/RByoung"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:text="@string/Young" />
        </RadioGroup>
    </LinearLayout>
...
