...
    <string name="title_activity_main">Hoot!</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="title_activity_signup">sign up</string>
    <string name="about_you">About You</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="wise">Wise</string>
    <string name="account_type">Account type</string>
    <string name="first_name">First Name</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="about_me">About Me</string>
    <string name="title_activity_feed">FeedActivity</string>
...
    <string name="knitting">Knitting</string>
    <string name="music">Music</string>
    <string name="photography">Photography</string>
    <string name="puzzles">Puzzles</string>
    <string name="sport">Sport</string>
    <string name="submit">Submit</string>
    <string name="profile_picture">Profile picture</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>

